nuevos equipos en tabla de posiciones

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     <li>Kincho Sur- 17 pts</li>
     <li>Nacional- 17 pts</li>
     <li>Penarol- 17 pts</li>
-    <li>Kincho Sur- 17 pts</li>
-    <li>Kincho Sur- 17 pts</li>
+    <li>Defensor- 17 pts</li>
+    <li>Danubio- 17 pts</li>
     <li>Lobos- 17 pts</li>
     <li>Arienzo- 12 pts</li>
     <li>Flbo- 10 pts</li>
