--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <main>
 
-    <!--HTML Semántico-->
+    <!--Menu-->
     <header>
       <nav>
           <div class="container">
@@ -50,7 +50,7 @@
     <img class="fotomia" src="./IMAGENES/1656546370-INE_7286.jpg" alt="Rodrigo"/>
   </article>
 
-
+<!--NOTICIAS-->
 <h1>ÚLTIMAS NOTICIAS</h1>
 
 
@@ -75,6 +75,8 @@
       <img class="fotonico1" src="./IMAGENES/nico5.jpg" alt="Noticias1"></a>
       <a href="https://www.ligasiete.com.uy/articulo/422/kincho-sur-5-2-loco-perro">El Kincho gana y golea</a>
     </div>
+
+    <!--tabla de posiciones-->
   <div class="caja c4"><h3>TABLA DE POSICIONES</h3>
   <ol>
     <li>Kincho Sur- 17 pts</li>
@@ -94,13 +96,8 @@
   </ol>
 </div>
 </div>
-
-
-<!--Lista Ordenada-->
-
-
-    
-    <section>
+<!--video del partido-->
+<section>
       <!--Iframe-->
       <section id="video">
         <h1>PARTIDO COMPLETO</h1>
