--- a/index.html
+++ b/index.html
@@ -107,3 +107,15 @@
     </section>
  
   </main>
+  <footer class:"footer">
+  <div class="redes-container">
+    <div class="main-content">
+      <ul class="redes-items">
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+      </ul>
+    </div>
+    </div>
+  </footer>
+  </body>
