--- a/paginas/elclub.html
+++ b/paginas/elclub.html
@@ -63,5 +63,15 @@
         </div>
       </div>
 
-    </main>
-      </body>
+  </main>
+  <footer class:"footer">
+    <div class="redes-container">
+      <div class="main-content">
+        <ul class="redes-items">
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+        </ul>
+      </div>
+      </div>
+    </footer>
