--- a/paginas/entradas.html
+++ b/paginas/entradas.html
@@ -128,4 +128,15 @@
           <input type="submit" value="Borrar Formulario"/>
         </form>
       </main>
+      <footer class:"footer">
+        <div class="redes-container">
+          <div class="main-content">
+            <ul class="redes-items">
+              <li><a href="#">Instagram</a></li>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+            </ul>
+          </div>
+          </div>
+        </footer>
   </body>
