--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -70,5 +70,16 @@
         </article>
     </section>
   </main>
+  <footer class:"footer">
+    <div class="redes-container">
+      <div class="main-content">
+        <ul class="redes-items">
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+        </ul>
+      </div>
+      </div>
+    </footer>
 
   </body>
