--- a/paginas/tienda.html
+++ b/paginas/tienda.html
@@ -37,6 +37,7 @@
         </div>
   </nav>
   <!-- preubaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+  <main>
   <section>
     <h2>COLECCIÓN TEMPORADA 22/23</h2>
 </section>
@@ -58,5 +59,18 @@
     <figure id="ft5">
         <img src="../IMAGENES/hat_6.jpg" alt="">
     </figure>
+  </main>
+   
+    <footer class:"footer">
+      <div class="redes-container">
+        <div class="main-content">
+          <ul class="redes-items">
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+          </ul>
+        </div>
+        </div>
+      </footer>
 
 </section>
