--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -1,50 +1,68 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--Favicon-->
-  <link rel="icon" href="../IMAGENES/Capa 67.png" type="image/x-icon">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Favicon-->
+        <link rel="icon" href="../IMAGENES/Capa 67.png" type="image/x-icon">
 
-  <title>Kincho Sur F.C.</title>
-      <!-- Bootstrap CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-  <!-- Nuestro CSS -->
-  <link href="../css/estilos.css" rel="stylesheet" type="text/css">
+        <title>Kincho Sur F.C.</title>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    
+        <!-- Nuestro CSS -->
+        <link href="../css/estilos.css" rel="stylesheet" type="text/css">
+    
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"></script>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!--Bootstrap Iconos-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.16.0/font/bootstrap-icons.css" rel="stylesheet">
 
-        <div class="logo">
-            <img src="../IMAGENES/Capa 67.png" alt="Logo"/>
-        </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-        <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <a class="nav-item nav-link active mt-md-0 mt-3" href="../index.html">INICIO</a>
-            <a class="nav-item nav-link active mt-md-0 mt-3" href="./elclub.html">EL CLUB</a>
-            <a class="nav-item nav-link active mt-md-0 mt-3" href="#">NOTICIAS</a>
-            <a class="nav-item nav-link active mt-md-0 mt-3" href="../paginas/entradas.html">ENTRADAS</a>
-            <a class="nav-item nav-link active mt-md-0 mt-3" href="../paginas/tienda.html">TIENDA</a>
-        </div>
-        </div>
-    </nav>
+    </head>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container">
+                <a class="navbar-brand logo" href="#">
+                <img src="../IMAGENES/Capa 67.png" alt="Logo" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                        <a class="nav-link" href="/index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="/paginas/elclub.html">EL CLUB</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#">NOTICIAS</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./entradas.html">ENTRADAS</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./tienda.html">TIENDA</a>
+                        </li>
+                    </ul> 
+                </div>
+                </div>
+            </nav>
+        </header>
 
 <!--NOTICIAS--------------------------------------------------------------------------------------------->
     <main>
     <section class="row">
-        <h2 class="col-12 text-center mt-4 text-uppercase">NOTICIAS MULTIMEDIA</h2>
+        <h2 class="col-12 text-center mt-4 text-uppercase">NOTICIAS</h2>
 
-        <article class="col-md-4 text-left">
+        <article class="col-md-4 text-center">
             <figure>
                 <img src="../IMAGENES/5n.jpg" alt="" class="img-fluid">
             </figure>
@@ -52,7 +70,7 @@
             <p>El histórico de la institución sureña logró su gol número 10 en el campeonato en la goleada.</p>
             <a href="#" class=" text-uppercase p-2 rounded">Leer más</a>
         </article>
-        <article class="col-md-4 text-left">
+        <article class="col-md-4 text-center">
             <figure>
                 <img src="../IMAGENES/mateo.jpg" alt="" class="img-fluid">
             </figure>
@@ -60,7 +78,7 @@
             <p>Nuestro golero sigue en racha,tras un partido parejo en los primeros minutos,logró seguridad</p>
             <a href="#" class="text-uppercase p-2 rounded">Leer más</a>
         </article>
-        <article class="col-md-4 text-left">
+        <article class="col-md-4 text-center">
             <figure>
                 <img src="../IMAGENES/nico5.jpg" alt="" class="img-fluid">
             </figure>
@@ -69,17 +87,85 @@
             <a href="#" class="text-uppercase p-2 rounded">Leer más</a>
         </article>
     </section>
-  </main>
-  <footer class:"footer">
-    <div class="redes-container">
-      <div class="main-content">
-        <ul class="redes-items">
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Twitter</a></li>
-        </ul>
-      </div>
-      </div>
-    </footer>
 
-  </body>
+    <section class="row">
+        <h2 class="col-12 text-center mt-4 text-uppercase">MULTIMEDIA</h2>
+
+        <article class="col-md-4 text-center">
+            <figure>
+                <img src="../IMAGENES/5n.jpg" alt="" class="img-fluid">
+            </figure>
+            <h3>FECHA 1</h3>
+            <p>KINCHO SUR 4 - MOLINO 1</p>
+            <a href="#" class=" text-uppercase p-2 rounded">Ver album completo</a>
+        </article>
+        <article class="col-md-4 text-center">
+            <figure>
+                <img src="../IMAGENES/mateo.jpg" alt="" class="img-fluid">
+            </figure>
+            <h3>FECHA 2</h3>
+            <p>SUR CITY 1 - KINCHO SUR 1</p>
+            <a href="#" class="text-uppercase p-2 rounded">Ver album completo</a>
+        </article>
+        <article class="col-md-4 text-center">
+            <figure>
+                <img src="../IMAGENES/nico5.jpg" alt="" class="img-fluid">
+            </figure>
+            <h3>El Kincho gana y golea</h3>
+            <p>KINCHO SUR 5 - L.P. 2</p>
+            <a href="#" class="text-uppercase p-2 rounded">Ver album completo</a>
+        </article>
+    </section>
+
+    </main>
+
+<!--FOOTER-->
+    <footer class="text-center text-lg-start bg-light text-muted">
+        <section class="">
+            <div class="container text-center text-md-start mt-5">
+            <!-- Grid row -->
+            <div class="row mt-3">
+            <!-- Grid column -->
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                <h6 class=" footer-text text-uppercase fw-bold mb-4">
+                <i class="fas fa-gem me-3"></i>Kincho Sur
+                </h6>
+                <p class="footer-text">
+                Un grupo de amigos que solamente se se juntan a divertirse mediante un balón de fútbol
+                </p>
+                </div>
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                <h6 class=" footer-text text-uppercase fw-bold mb-4">
+                Redes Sociales
+                </h6>
+                <p>
+                <a href="#!" class="footer-text">Instagram</a>
+                </p>
+                <p>
+                <a href="#!" class="footer-text">Facebook</a>
+                </p>
+                <p>
+                <a href="#!" class="footer-text">Twitter</a>
+                </p>
+                <p>
+                <a href="#!" class="footer-text">Youtube</a>
+                </p>
+            </div>
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                <h6 class="footer-text text-uppercase fw-bold mb-4">
+                Quizas te interese...
+                </h6>
+                <p>
+                <a href="/paginas/elclub.html" class="footer-text">El club</a>
+                </p>
+                <p>
+                <a href="/paginas/entradas.html" class="footer-text">Entradas</a>
+                <p>
+                <a href="/paginas/tienda.html" class="footer-text">Tienda</a>
+                </p>
+            </div>
+            </div>
+            </div>
+        </section>
+    </footer>
+</body>
