--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -153,7 +153,7 @@
             </div>
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                 <h6 class="footer-text text-uppercase fw-bold mb-4">
-                Quizas te interese..
+                Quizas te interese...
                 </h6>
                 <p>
                 <a href="/paginas/elclub.html" class="footer-text">El club</a>
