--- a/paginas/elclub.html
+++ b/paginas/elclub.html
@@ -2,9 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <!--SEO-->
+  <meta name="description" content="Aca conoceras los inicios del club y su extensa historia a lo largo de los años">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="kincho sur, futbol, historia, sede, ligasiete, amigos">
   <!--Favicon-->
-  <link rel="icon" href="../IMAGENES/Capa 67.png" type="image/x-icon">
+  <link rel="icon" href="../IMAGENES/Capa 67i.png" type="image/x-icon">
 
 
   <title>Kincho Sur F.C.</title>
@@ -57,7 +60,7 @@
     </nav>
   </header>
     <main>
-
+<!--comienzo de historia-->
       <div class="row">
         <div class="col-12 text-center">
           <h1 class="mt-4 text-uppercase">HISTORIA DEL CLUB</h1>
@@ -81,6 +84,8 @@
           </div>
         </div>
       </div>
+
+      <!--Sede-->
 
       <div class="row justify-content-md-between">
         <div class="col-md-5 order-md-first text-center">
