--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--SEO-->
+        <meta name="description" content="Columna de noticias y multimedia de los partidos fecha a fecha para que estes al tanto de las novedades">
+        <meta name="keywords" content="kincho sur, futbol, futbol uruguayo, amigos, ligasiete, fotos, noticias,multimedia">
         <!--Favicon-->
-        <link rel="icon" href="../IMAGENES/Capa 67.png" type="image/x-icon">
+        <link rel="icon" href="../IMAGENES/Capa 67i.png" type="image/x-icon">
 
 
         <title>Kincho Sur F.C.</title>
@@ -90,28 +93,28 @@
 
     <section class="row">
         <h2 class="col-12 text-center mt-4 text-uppercase">MULTIMEDIA</h2>
-
+<!--multimedia-->
         <article class="col-md-4 text-center">
             <figure>
-                <img src="../IMAGENES/5n.jpg" alt="" class="img-fluid">
+                <img src="../IMAGENES/F1.jpg" alt="" class="img-fluid">
             </figure>
             <h3>FECHA 1</h3>
-            <p>KINCHO SUR 4 - MOLINO 1</p>
-            <a href="#" class=" text-uppercase p-2 rounded">Ver album completo</a>
-        </article>
-        <article class="col-md-4 text-center">
+            <p>MOLINO 1 - KINCHO SUR 4</p>
+            <a href="#" class="text-uppercase p-2 rounded">Ver album completo</a>
+            </article>
+            <article class="col-md-4 text-center">
             <figure>
-                <img src="../IMAGENES/mateo.jpg" alt="" class="img-fluid">
+                <img src="../IMAGENES/F2.jpg" alt="" class="img-fluid">
             </figure>
             <h3>FECHA 2</h3>
             <p>SUR CITY 1 - KINCHO SUR 1</p>
             <a href="#" class="text-uppercase p-2 rounded">Ver album completo</a>
-        </article>
-        <article class="col-md-4 text-center">
+            </article>
+            <article class="col-md-4 text-center">
             <figure>
-                <img src="../IMAGENES/nico5.jpg" alt="" class="img-fluid">
+                <img src="../IMAGENES/F3.jpg" alt="" class="img-fluid">
             </figure>
-            <h3>El Kincho gana y golea</h3>
+            <h3>Fecha 3</h3>
             <p>KINCHO SUR 5 - L.P. 2</p>
             <a href="#" class="text-uppercase p-2 rounded">Ver album completo</a>
         </article>
