--- a/paginas/tienda.html
+++ b/paginas/tienda.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--SEO-->
+        <meta name="description" content="Tienda oficial del club con la indumentaria de la presente temporada">
+        <meta name="keywords" content="kincho sur, futbol, futbol uruguayo, amigos, ligasiete, remera futbol,sudadera futbol,gorra invierno,tienda">
         <!--Favicon-->
-        <link rel="icon" href="../IMAGENES/Capa 67.png" type="image/x-icon">
+        <link rel="icon" href="../IMAGENES/Capa 67i.png" type="image/x-icon">
 
 
         <title>Kincho Sur F.C.</title>
@@ -46,17 +49,17 @@
                 <a class="nav-link" href="./noticias.html">NOTICIAS</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">ENTRADAS</a>
+                <a class="nav-link" href="./entradas.html">ENTRADAS</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="./tienda.html">TIENDA</a>
+                <a class="nav-link" href="#">TIENDA</a>
                 </li>
             </ul> 
         </div>
         </div>
     </nav>
   </header>
-  <!-- preubaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
+  <!-- Gird e imagenes-->
   <main>
   <section>
     <h2>COLECCIÓN TEMPORADA 22/23</h2>
@@ -79,7 +82,39 @@
   </figure>
 </section>
   </main>
-  
+  <section>
+  <div class="container-intercalado">
+    <div class="descripcion">Camiseta titular - $ 2000</div>
+    <div class="imagen-contenedor">
+        <img src="../IMAGENES/cuadrado1.jpg" alt="Ejemplo de imagen">
+    </div>
+  </div>
+  <div class="container-intercalado">
+    <div class="descripcion">Camiseta suplente - $ 2300</div>
+    <div class="imagen-contenedor">
+        <img src="../IMAGENES/cuadrado2.jpg" alt="Ejemplo de imagen">
+    </div>
+  </div>
+  <div class="container-intercalado">
+    <div class="descripcion">Sudadera blanca - $ 3500</div>
+    <div class="imagen-contenedor">
+        <img src="../IMAGENES/cuadrado4.jpg" alt="Ejemplo de imagen">
+    </div>
+  </div>
+  <div class="container-intercalado">
+    <div class="descripcion">Sudadera navy - $ 3500</div>
+    <div class="imagen-contenedor">
+        <img src="../IMAGENES/cuadrado5.jpg" alt="Ejemplo de imagen">
+    </div>
+  </div>
+  <div class="container-intercalado">
+    <div class="descripcion">Gorra de invierno - $ 1500</div>
+    <div class="imagen-contenedor">
+        <img src="../IMAGENES/cuadrado1.jpg" alt="Ejemplo de imagen">
+    </div>
+  </div>
+</section>
+
   <!--FOOTER-->
   <footer class="text-center text-lg-start bg-light text-muted">
     <section class="">
@@ -120,9 +155,9 @@
             <a href="/paginas/elclub.html" class="footer-text">El club</a>
             </p>
             <p>
-            <a href="/paginas/entradas.html" class="footer-text">Entradas</a>
+            <a href="/paginas/noticias.html" class="footer-text">Noticias</a>
             <p>
-            <a href="/paginas/tienda.html" class="footer-text">Tienda</a>
+            <a href="/paginas/entradas.html" class="footer-text">Entradas</a>
             </p>
         </div>
         </div>
