--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--SEO-->
+    <meta name="description" content="Sitio oficial del equipo Kincho Sur,dedicado a los hinchas del club donde conoceras las nuevas novedades">
+    <meta name="keywords" content="kincho sur, futbol, futbol uruguayo, amigos, ligasiete, tabla de posiciones">
     <!--Favicon-->
-    <link rel="icon" href="../IMAGENES/Capa 67.png" type="image/x-icon">
+    <link rel="icon" href="../IMAGENES/Capa 67i.png" type="image/x-icon">
   
   
     <title>Kincho Sur F.C.</title>
@@ -123,55 +126,55 @@
   </main>
 
 <!--FOOTER-->
-<footer class="text-center text-lg-start bg-light text-muted">
-  <section class="">
-      <div class="container text-center text-md-start mt-5">
-      <!-- Grid row -->
-      <div class="row mt-3">
-      <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <h6 class=" footer-text text-uppercase fw-bold mb-4">
-          <i class="fas fa-gem me-3"></i>Kincho Sur
-          </h6>
-          <p class="footer-text">
-          Un grupo de amigos que solamente se se juntan a divertirse mediante un balón de fútbol
-          </p>
-          </div>
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <h6 class=" footer-text text-uppercase fw-bold mb-4">
-          Redes Sociales
-          </h6>
-          <p>
-          <a href="#!" class="footer-text">Instagram</a>
-          </p>
-          <p>
-          <a href="#!" class="footer-text">Facebook</a>
-          </p>
-          <p>
-          <a href="#!" class="footer-text">Twitter</a>
-          </p>
-          <p>
-          <a href="#!" class="footer-text">Youtube</a>
-          </p>
-      </div>
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <h6 class="footer-text text-uppercase fw-bold mb-4">
-          Quizas te interese...
-          </h6>
-          <p>
-          <a href="/paginas/elclub.html" class="footer-text">El club</a>
-          </p>
-          <p>
-            <a href="/paginas/noticias.html" class="footer-text">Noticias</a>
+  <footer class="text-center text-lg-start bg-light text-muted">
+    <section class="">
+        <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row mt-3">
+        <!-- Grid column -->
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <h6 class=" footer-text text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i>Kincho Sur
+            </h6>
+            <p class="footer-text">
+            Un grupo de amigos que solamente se se juntan a divertirse mediante un balón de fútbol
             </p>
-          <p>
-          <a href="/paginas/entradas.html" class="footer-text">Entradas</a>
-          <p>
-          <a href="/paginas/tienda.html" class="footer-text">Tienda</a>
-          </p>
-      </div>
-      </div>
-      </div>
-  </section>
-</footer>
+            </div>
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <h6 class=" footer-text text-uppercase fw-bold mb-4">
+            Redes Sociales
+            </h6>
+            <p>
+            <a href="#!" class="footer-text">Instagram</a>
+            </p>
+            <p>
+            <a href="#!" class="footer-text">Facebook</a>
+            </p>
+            <p>
+            <a href="#!" class="footer-text">Twitter</a>
+            </p>
+            <p>
+            <a href="#!" class="footer-text">Youtube</a>
+            </p>
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <h6 class="footer-text text-uppercase fw-bold mb-4">
+            Quizas te interese...
+            </h6>
+            <p>
+            <a href="/paginas/elclub.html" class="footer-text">El club</a>
+            </p>
+            <p>
+              <a href="/paginas/noticias.html" class="footer-text">Noticias</a>
+              </p>
+            <p>
+            <a href="/paginas/entradas.html" class="footer-text">Entradas</a>
+            <p>
+            <a href="/paginas/tienda.html" class="footer-text">Tienda</a>
+            </p>
+        </div>
+        </div>
+        </div>
+    </section>
+  </footer>
 </body>
