--- a/paginas/entradas.html
+++ b/paginas/entradas.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--SEO-->
+        <meta name="description" content="Adquiri tus entradas para los encuentros de la temporada y asi apoyar el equipo">
+        <meta name="keywords" content="kincho sur, futbol, futbol uruguayo, entradas, estadio, tribuna, datos personales, formulario">
         <!--Favicon-->
-        <link rel="icon" href="../IMAGENES/Capa 67.png" type="image/x-icon">
+        <link rel="icon" href="../IMAGENES/Capa 67i.png" type="image/x-icon">
 
 
         <title>Kincho Sur F.C.</title>
@@ -202,7 +205,7 @@
                 <a href="/paginas/elclub.html" class="footer-text">El club</a>
                 </p>
                 <p>
-                <a href="/paginas/noticias.html" class="footer-text">Noticiass</a>
+                <a href="/paginas/noticias.html" class="footer-text">Noticias</a>
                 <p>
                 <a href="/paginas/tienda.html" class="footer-text">Tienda</a>
                 </p>
