--- a/paginas/elclub.html
+++ b/paginas/elclub.html
@@ -104,6 +104,22 @@
         </div>
       </div>
 
+      <div class="row justify-content-md-between">
+        <div class="col-md-5 order-md-first text-center">
+          <figure class="mb-4 mb-md-5">
+            <img class="plantel" src="../IMAGENES/plantel.jpeg" alt="Plantel">
+          </figure>
+        </div>
+        
+        <div class="col-md-6 mt-md-6 order-md-last">
+          <div class="text-center plantel1">
+            <h1>PRIMER PARTIDO</h1>
+            <p class="mb-0">El 25 de junio de 1899, Nacional venció por 2 a 0 al segundo equipo del Uruguay Athletic. El partido se jugó en Punta Carretas, en un predio que fue cedido a Nacional por Juan Cat, Gerente de la Sociedad Comercial de Montevideo. Los tantos de Nacional en ese encuentro, fueron anotados por Melitón Romero, autor del primer gol de la historia y por Juan Carlos Vallarino.El 27 de mayo de 1900, Nacional jugó su primer partido en el recientemente inaugurado Gran Parque Central, ante el Deuschter F.K. Desde ese día, el escenario situado en el histórico predio de la “Quinta de la Paraguaya”, lugar donde José Artigas fue proclamado en 1811 Jefe de los Orientales, pasó a ser la casa de Nacional. El GPC es el estadio más antiguo de América y el 16º más antiguo del mundo
+            </p>
+          </div>
+        </div>
+      </div>
+
   </main>
     
 <!--FOOTER-->
