--- a/paginas/tienda.html
+++ b/paginas/tienda.html
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="/index.html">INICIO</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="/paginas/elclub.html">EL CLUB</a>
+                <a class="nav-link" href="./elclub.html">EL CLUB</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="./noticias.html">NOTICIAS</a>
