--- a/paginas/entradas.html
+++ b/paginas/entradas.html
@@ -29,7 +29,7 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
                 <div class="container">
                 <a class="navbar-brand logo" href="#">
                 <img src="../IMAGENES/Capa 67.png" alt="Logo" />
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="/index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="/paginas/elclub.html">EL CLUB</a>
+                        <a class="nav-link" href="./elclub.html">EL CLUB</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="./noticias.html">NOTICIAS</a>
@@ -69,7 +69,7 @@
                 <h3 class="mt-12 text-uppercase text-left">INFORMACIÓN DE LOS ESPECTADORES</h3>
                 <form action="procesar.php" method="post">
                   <!-- Campos de información de los espectadores -->
-                  <div class="mb-3">
+                  <div class="mb-3 info">
                     <label for="nombre">Correo electronico:</label>
                     <input type="text" name="documento" placeholder="kinchosur2023">
                   </div>
