--- a/index.html
+++ b/index.html
@@ -206,15 +206,15 @@
             Quizas te interese...
             </h6>
             <p>
-            <a href="/paginas/elclub.html" class="footer-text">El club</a>
+            <a href="./paginas/elclub.html" class="footer-text">El club</a>
             </p>
             <p>
-              <a href="/paginas/noticias.html" class="footer-text">Noticias</a>
+              <a href="./paginas/noticias.html" class="footer-text">Noticias</a>
               </p>
             <p>
-            <a href="/paginas/entradas.html" class="footer-text">Entradas</a>
+            <a href="./paginas/entradas.html" class="footer-text">Entradas</a>
             <p>
-            <a href="/paginas/tienda.html" class="footer-text">Tienda</a>
+            <a href="./paginas/tienda.html" class="footer-text">Tienda</a>
             </p>
         </div>
         </div>
