--- a/paginas/tienda.html
+++ b/paginas/tienda.html
@@ -40,7 +40,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                <a class="nav-link" href="/index.html">INICIO</a>
+                <a class="nav-link" href="../index.html">INICIO</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="./elclub.html">EL CLUB</a>
@@ -152,12 +152,12 @@
             Quizas te interese...
             </h6>
             <p>
-            <a href="/paginas/elclub.html" class="footer-text">El club</a>
+            <a href="./elclub.html" class="footer-text">El club</a>
             </p>
             <p>
-            <a href="/paginas/noticias.html" class="footer-text">Noticias</a>
+            <a href="./noticias.html" class="footer-text">Noticias</a>
             <p>
-            <a href="/paginas/entradas.html" class="footer-text">Entradas</a>
+            <a href="./entradas.html" class="footer-text">Entradas</a>
             </p>
         </div>
         </div>
